# RoboLink-dci-5s-m-ros2-v13

./: README.md
DOC/: 0.note  cri_lib.html  search.js
DOC/cri_lib/: cri_controller.html  cri_errors.html  robot_state.html
DOC/test/: cmd.py  relative_move.py  test_bar_move.py  test_getinfo.py  test_move.py
cobot_controller/: setup.py
cobot_controller/cobot_controller/: fake_arm_controller.py  real_arm_controller.bak  real_arm_controller.py
cobot_description/: package.xml  setup.py
cobot_description/launch/: gazebo.launch.py  xacro.launch.py
cobot_description/meshes/: RL-DCi-5S-M.xml  link_tool.STL
cobot_description/rviz/: platform.rviz
cobot_description/urdf/: cobot_description.xacro
cobot_examples/: setup.cfg  setup.py
cobot_examples/cobot_examples/: transform.py
cobot_examples/launch/: base.launch.py  fake.launch.py  fake.launch.py.bak  moveit.launch.py
cobot_examples/rviz/: platform.rviz
cobot_examples/scripts/: JointConstraint.py  PositionConstraint.py  PositionConstraint_StraightPath.py  ik_solver.py  ik_solver_0.py
cobot_examples/test/: JointConstraintTest.py
cobot_hardware/: package.xml  setup.py
cobot_hardware/cobot_hardware/: controller_joint_state.py  robot_connection.py
cobot_moveit/: package.xml  setup.cfg  setup.py
cobot_moveit/config/: igus_DCi_5S_M.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
cobot_moveit/launch/: demo.launch.py
me5110q_gui/: package.xml  setup.cfg  setup.py
me5110q_gui/me5110q_gui/: me5110q_gui_node.py  untitled.py
(+47 files in other folders)
