<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_description</name>
  <version>0.0.1</version>
  <description>ROS2 package for describing the collaborative robot model</description>
  <maintainer email="tengsudo.vn@gmail.com">TengSudo</maintainer>
  <license>612M</license>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
