<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_hardware</name>
  <version>0.0.1</version>
  <description>Package to connect with robot hardware</description>
  <maintainer email="tengsudo.vn@gmail.com">TengSudo</maintainer>
  <license>TengSudo</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
